Added auth configuration

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=mysql_Lhpqhv33m4
 DB_DATABASE=clinica_veterinaria
-DB_PORT=
+DB_PORT=3306
+JWT_SECRET=secret
