--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
@@ -16,9 +17,11 @@
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.1.2",
-    "sequelize": "^6.28.1"
+    "sequelize": "^6.28.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
